# vkgs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DETAILS.md  LICENSE  README.md
binding/python/: main.cc  setup.py
binding/python/pygs/: __init__.py
binding/python/pygs_cpp/: main.cc
examples/: pygs_base.cc  vkgs_viewer.cc
examples/argparse/: argparse.hpp
include/pygs/engine/: engine.h
include/pygs/scene/: camera.h  splats.h
include/pygs/util/: clock.h  timer.h
include/pygs/window/: event.h  window.h
include/vkgs/engine/: engine.h
include/vkgs/scene/: camera.h
include/vkgs/util/: clock.h  timer.h
src/pygs/engine/: engine.cc  engine.cu  radixsort.cc  radixsort.h  splat_load_thread.cc  splat_load_thread.h
src/pygs/engine/interop/: cuda_image.cu  cuda_image.h  cuda_semaphore.cu  cuda_semaphore.h
src/pygs/engine/vulkan/: attachment.cc  attachment.h  buffer.cc  buffer.h  compute_pipeline.cc  compute_pipeline.h  context.cc  context.h  cpu_buffer.cc  cpu_buffer.h  cuda_image.cu  cuda_image.h  cuda_semaphore.cu  cuda_semaphore.h  descriptor.cc  descriptor.h  descriptor_layout.cc  descriptor_layout.h  framebuffer.cc  framebuffer.h  graphics_pipeline.cc  graphics_pipeline.h  image_spec.h  pipeline_layout.cc  pipeline_layout.h  radixsort.cc  radixsort.h  render_pass.cc  render_pass.h  shader_module.cc  shader_module.h  swapchain.cc  swapchain.h  uniform_buffer.cc  uniform_buffer.h
src/pygs/engine/vulkan/shader/: axes.h  blend_oit.h  color.h  inverse_index.h  inverse_map.h  multi_radixsort.h  order.h  parse_ply.h  point.h  projection.h  rank.h  splat.h  splat_fill.h  splat_oit.h  splat_outline.h  uniforms.h
src/pygs/scene/: camera.cc  splats.cc
src/pygs/window/: window.cc
src/shader/: color.frag  color.vert  inverse_index.comp  parse_ply.comp  projection.comp  rank.comp  splat.frag  splat.vert  splat_geom.geom  splat_geom.vert
src/vkgs/engine/: engine.cc  load_ply.cc  load_ply.h  parse_ply.cc  splat_load_thread.cc  splat_load_thread.h
src/vkgs/engine/interop/: cuda_image.cu  cuda_image.h  cuda_semaphore.cu  cuda_semaphore.h
src/vkgs/engine/vulkan/: attachment.cc  attachment.h  buffer.cc  buffer.h  compute_pipeline.cc  compute_pipeline.h  context.cc  context.h  cpu_buffer.cc  cpu_buffer.h  descriptor.cc  descriptor.h  descriptor_layout.cc  descriptor_layout.h  framebuffer.cc  framebuffer.h  graphics_pipeline.cc  graphics_pipeline.h  image_spec.h  pipeline_layout.cc  pipeline_layout.h  render_pass.cc  render_pass.h  shader_module.h  swapchain.cc  swapchain.h  uniform_buffer.cc  uniform_buffer.h
src/vkgs/engine/vulkan/shader/: uniforms.h
src/vkgs/scene/: camera.cc
src/vkgs/viewer/: viewer.cc  viewer.h
src/vkgs/vulkan/: attachment.cc  attachment.h  buffer.cc  buffer.h  compute_pipeline.cc  compute_pipeline.h  context.cc  context.h  cpu_buffer.cc  cpu_buffer.h  descriptor.cc  descriptor.h  descriptor_layout.cc  descriptor_layout.h  fence.cc  fence.h  framebuffer.cc  framebuffer.h  graphics_pipeline.cc  graphics_pipeline.h  image_spec.h  pipeline_layout.cc  pipeline_layout.h  render_pass.cc  render_pass.h  semaphore.cc  semaphore.h  shader_module.h  swapchain.cc  swapchain.h  timeline_semaphore.cc  timeline_semaphore.h  timestamp_query.cc  timestamp_query.h  uniform_buffer.cc  uniform_buffer.h
src/vkgs/vulkan/shader/: uniforms.h
